인터페이스 이름 변경
탭과 버튼 등의 이름을 사용자가 잘 이해 하기 쉽도록 이름을 변경 함.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,4 @@
 <resources>
-    <string name="app_name">My Application</string>
-    <string name="strBtn1">버튼!</string>
+    <string name="app_name">전력측정기</string>
+    <string name="strBtn1">블루투스 연결</string>
 </resources>
